kubernetes/gateway-concepts/1-gateway.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: acme-external
  namespace: infra
spec:
  gatewayClassName: istio
  listeners:
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      selector:
        matchLabels:
          gateway: acme-external
      namespaces:
        from: All
