kubernetes/gateway-concepts/3-httproute-inventory.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: acme-inventory
  namespace: inventory
  labels:
    gateway: acme-external
spec:
  hostnames:
  - acme.io
  rules:
  - matches:
    - path:
        value: /inventory
    forwardTo:
    - serviceName: acme-inventory
      port: 8080
  gateways:
    allow: All
